--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -1,7 +1,7 @@
 name:  CI/CD pipelie to Deploy Into ECS
 on:
   push:
-    branches: master
+    branches: main
 jobs:
    build-deploy:
      runs-on: ubuntu-latest
