--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -21,6 +21,27 @@ jobs:
          run: mvn test
        - name: maven package
          run: mvn package
+       - name: verify war file
+         run: ls -lh target/
+       - name: Build Docker image
+         run: docker build -t trainbook-app .
+        
+       - name: Configure AWS
+         uses: aws-actions/configure-aws-credentials@v4
+         with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+       - name: Login to Amazon ECR
+         uses: aws-actions/amazon-ecr-login@v2
+
+       - name: Build Docker Image
+         run: |
+          IMAGE_TAG=$(date +%s)
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          docker build -t ${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG .
+          
 
       
          
