--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -23,9 +23,6 @@ jobs:
          run: mvn package
        - name: verify war file
          run: ls -lh target/
-       - name: Build Docker image
-         run: docker build -t trainbook-app .
-        
        - name: Configure AWS
          uses: aws-actions/configure-aws-credentials@v4
          with:
@@ -41,8 +38,16 @@ jobs:
           IMAGE_TAG=$(date +%s)
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           docker build -t ${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG .
-          
+       - name: Tag Docker Image
+         run: |
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          docker tag ${{ secrets.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} \
+            $ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
 
+       - name: Push to ECR
+         run: |
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          docker push $ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
       
          
     
